updates from test repo

--- a/src/styles/components/button.module.scss
+++ b/src/styles/components/button.module.scss
@@ -11,7 +11,7 @@
   background: var(--secondary);
   text-decoration: none;
   border: none;
-  cursor: url('../../assets/media/images/cursor.png') 2 2, pointer;
+  cursor: url('/assets/media/images/cursor.png') 2 2, pointer;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
   padding: 1.25rem;
   text-transform: uppercase;
