--- a/src/styles/components/layout.module.scss
+++ b/src/styles/components/layout.module.scss
@@ -46,6 +46,7 @@
 .content__split {
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
   justify-content: flex-start;
 
   .content__split__column {
