--- a/src/styles/dependencies/_base.scss
+++ b/src/styles/dependencies/_base.scss
@@ -54,7 +54,7 @@ html {
 
 body {
   cursor: default;
-  cursor: url('../../assets/media/images/cursor.png') 2 2, default;
+  cursor: url('/assets/media/images/cursor.png') 2 2, default;
   background: var(--primary-dark);
 }
 
