--- a/src/styles/components/demo-link.module.scss
+++ b/src/styles/components/demo-link.module.scss
@@ -11,6 +11,13 @@
     position: relative;
     width: 100%;
 
+    img {
+      width: 100%;
+      min-width: 100%;
+      min-height: 100%;
+      object-fit: cover;
+    }
+
     .h3 {
       font-family: var(--playfair);
       color: var(--display-color);
